--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
+spring.http.multipart.maxFileSize = 10Mb
+spring.http.multipart.maxRequestSize=100Mb
