--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.mvc.view.prefix = /WEB-INF/jsp/
-spring.mvc.view.suffix = .jsp
-spring.http.multipart.maxFileSize = 10Mb
-spring.http.multipart.maxRequestSize=100Mb
+spring.thymeleaf.cache=true
+spring.devtools.restart.enabled=true   //¿ªÆô
+spring.devtools.restart.additional-paths=src/main/java  //¼àÌýÄ¿Â¼
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+#spring.http.multipart.maxFileSize=10Mb
+#spring.http.multipart.maxRequestSize=100Mb
