--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -34,4 +34,6 @@ dependencies {
 	implementation 'com.alibaba:fastjson:1.2.31'
 	testImplementation 'com.alibaba:fastjson:1.2.31'
 
+	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+
 }
