--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
-#spring.http.multipart.maxFileSize=10Mb
-#spring.http.multipart.maxRequestSize=100Mb
+spring.servlet.multipart.max-file-size=10Mb
+spring.servlet.multipart.max-request-size=100Mb
