--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -35,5 +35,6 @@ dependencies {
 	testImplementation 'com.alibaba:fastjson:1.2.31'
 
 	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
 
 }
