--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -36,5 +36,6 @@ dependencies {
 
 	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springframework.boot:spring-boot-starter-aop"
 
 }
