--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.thymeleaf.mode=HTML5
 #spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=10Mb
 spring.servlet.multipart.max-request-size=100Mb
+
+
+
+spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/mydemo
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
+
+
