--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.servlet.multipart.max-request-size=100Mb
 
 
 
-spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/mydemo
+spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/my_demo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
